# zOS

./: .gitignore  LICENSE  README.md  build
base/loader/: Cargo.toml  pkgbuild.sh
base/loader/src/: allocator.rs  config.rs  main.rs  uuid.rs
debugutils/: Cargo.toml
debugutils/src/: lib.rs
hal/boot/bootinfo/: .gitignore  Cargo.toml
hal/boot/early_log/: Cargo.toml
hal/boot/grub-2.12/: .gitignore  pkgbuild.sh
hal/i386/: i386_bootinfo.h
hal/i386/initializer/: .gitignore  Cargo.toml  Makefile  build.rs  i686.json  initializer.c  initializer.rs  link.ld  multiboot.h  pkgbuild.sh  start.asm
hal/i386/initializer/src/: bootinfo.rs  console.rs  debug_tools.rs  gdt.rs  i386bootinfo.rs  initbootinfo.rs  lib_bootinfo.rs  load_gdt.S  main.rs  multiboot2.rs  start.S  start.asm  writer.rs
hal/lib/: Cargo.toml  bootinfo.h  early_log.c  early_log.h  io.c  io.h  string_utils.c  string_utils.h
hal/lib/io/: Cargo.toml
hal/lib/libhal/: Cargo.toml
hal/lib/src/: bootinfo.rs  io.rs  lib.rs
loader/: Cargo.toml  loader.conf  pkgbuild.sh
loader/.cargo/: config.toml
loader/src/: allocator.rs  console.rs  disk.rs  drivers.rs  main.rs  uefi.rs
loader/src/drivers/: console.rs  disk.rs  fat32.rs  mod.rs
loader/src/libuefi/: general.rs
loader/src/uefi/: bootservices.rs  general.rs
misc/: Cargo.toml  grub.cfg
misc/src/: lib.rs
sys/lib/debugtools/: Cargo.toml
sys/lib/libchimera/: Cargo.toml
sys/lib/libchimera/src/: lib.rs
sys/lib/log/: Cargo.toml
sys/lib/log/src/: early_log.rs  lib.rs
sys/zoslib/: .gitignore  Cargo.toml
sys/zoslib/src/: bootinfo.rs  (+2 more)
(+73 files in other folders)
