[package]
name = "initializer"
version = "0.1.0"
edition = "2021"

build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zOS = { path = "../../../sys/lib/libzOS" }
debugtools = { path = "../../../sys/lib/debugtools" }


[features]
default = []
serial_debug = []
