[package]
name = "sys_log"
version = "0.0.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hal = { path = "../../../hal/lib" }
debugtools = { path = "../../../sys/lib/debugtools" }


[features]
default = []
serial_debug = []
